--- a/playbooks/docker_validate.yml
+++ b/playbooks/docker_validate.yml
@@ -11,5 +11,9 @@
       - name: docker container logs
         shell: "/usr/local/bin/docker logs jenkins 2>&1 | grep password -A 2"
         register: result
+        changed_when: false
       - debug:
           msg: "{{ result.stdout_lines }}"
+      - name: Check that you can connect (GET) to a page and it returns a status 200
+        uri:
+          url: http://192.168.1.3:8888/login
